# explore-quantum

./: .gitignore  AGENTS.md  README.md  pyproject.toml
instructs/: i1.txt  test2.txt  test3.txt  test4.txt
lectures/transcripts/: #1:100- Toggling qubits || Quantum Computer Programming in 100 Easy Lessons.txt  #2:100- Mystery Toggles || Quantum Computer Programming in 100 Easy Lessons.txt  #3:100- What you will dislike about this course || Quantum Computer Programming in 100 Easy Lessons.txt  (+1 more)
resources/instructs/: test1.txt  test_had_1.txt  test_had_2.txt
scripts/: run_all_tests.sh
src/: ex20.py  ex5.1.py  ex5_1.py  ex7.1.py  ex7.1_exact.py  ex7_1.py  ex7_1_exact.py
tests/: test_ex5_1.py  test_ex7_1_exact.py
wiki/: exercise-001-reversible-toggle-subroutines.md  exercise-004-valid-quantum-states.md  exercise-005-probabilistic-computer-simulator.md  exercise-007-exact-probability-simulator.md  exercise-008-left-cyclic-shift-path-diagrams.md  exercise-009-matrix-multiplication-path-counts.md  exercise-013-composite-quantum-instructions.md  exercise-014-unitary-property.md  exercise-015-clockwise-counterclockwise-unitaries.md  exercise-016-composite-operations-matrix-products.md  exercise-017-path-diagrams-adjoints-inner-products.md  exercise-018-unitary-adjoints-undo-operations.md  exercise-019-toggles-detective-cube-diagrams.md  ibm-qiskit-qinfo-01-single-systems.md  ibm-qiskit-qinfo-02-multiple-systems.md  ibm-qiskit-qinfo-03-quantum-circuits.md  ibm-qiskit-qinfo-04-entanglement-in-action.md  ibm-qiskit-qinfo-course-overview.md  index.md
(+63 files in other folders)
